# Kos-Engine-2.0

./: .gitignore
kOS/: CMakeLists.txt
kOS/Alchemication/: CMakeLists.txt
kOS/Alchemication/Application/: Application.cpp  Application.h  ApplicationData.h  Window.cpp  Window.h  main.cpp
kOS/Alchemication/Configs/: Config.json  ConfigPath.h
kOS/Engine/: CMakeLists.txt
kOS/Engine/Config/: ComponentRegistry.cpp  ComponentRegistry.h
kOS/Engine/DeSerialization/: SerializationReflection.h  json_handler.cpp  json_handler.h
kOS/Engine/Debugging/: Performance.h
kOS/Engine/ECS/: ECS.cpp  ECS.h  ECSList.h  Hierachy.cpp  Hierachy.h  LayerData.h  Layers.cpp  Layers.h
kOS/Engine/ECS/Component/: Component.h  ComponentHeader.h  LightComponent.h  NameComponent.h  OctreeGeneratorComponent.h  ParticleComponent.h  PathfinderComponent.h  PathfinderTargetComponent.h  RigidbodyComponent.h  TransformComponent.h
kOS/Engine/ECS/System/: AnimatorSystem.cpp  AnimatorSystem.h  AudioSystem.cpp  AudioSystem.h  CameraSystem.cpp  CameraSystem.h  CanvasSpriteRenderSystem.cpp  CanvasSpriteRenderSystem.h  CanvasTextRenderSystem.cpp  CanvasTextRenderSystem.h  CharacterControllerSystem.cpp  CharacterControllerSystem.h  ColliderSystem.cpp  ColliderSystem.h  CubeRenderSystem.cpp  CubeRenderSystem.h  DebugBoxColliderRenderSystem.cpp  DebugBoxColliderRenderSystem.h  DebugCapsuleColliderRenderSystem.cpp  DebugCapsuleColliderRenderSystem.h  DebugSphereColliderRenderSystem.cpp  DebugSphereColliderRenderSystem.h  LightingSystem.cpp  LightingSystem.h  MeshRenderSystem.cpp  MeshRenderSystem.h  ParticleSystem.cpp  ParticleSystem.h  PathfindingSystem.cpp  PathfindingSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RigidbodySystem.cpp  RigidbodySystem.h  ScriptingSystem.cpp  ScriptingSystem.h  SkinnedMeshRenderSystem.cpp  SkinnedMeshRenderSystem.h  System.h  (+3 more)
kOS/Engine/Graphics/: Camera.cpp  CubeMap.cpp  CubeMap.h  GraphicsManager.cpp  GraphicsManager.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.h  Particle.h  Renderer.cpp  Renderer.h  Shader.h  ShaderManager.h  UIElements.h
kOS/Engine/Inputs/: Input.cpp  Input.h
kOS/Engine/Pathfinding/: BoundsCheck.cpp  BoundsCheck.h  Graph.cpp  Graph.h  OctreeGrid.cpp  OctreeGrid.h  OctreeNode.cpp  OctreeNode.h  OctreeObject.cpp  OctreeObject.h
kOS/Engine/Physics/: PhysicsEventCallback.cpp  PhysicsEventCallback.h  PhysicsLayer.cpp  PhysicsLayer.h  PhysicsManager.cpp  PhysicsManager.h  PhysxUtils.h
kOS/Engine/Reflection/: DeepCopy.h  Field.cpp  Field.h  IReflectionInvoker.h  Reflection.h  ReflectionInvoker.h
kOS/Engine/Resources/: R_Animation.cpp  R_DepthMapCube.cpp  R_DepthMapCube.h  R_Material.cpp  R_Model.cpp  R_Prefab.cpp  R_Prefab.h  R_Scene.cpp  R_Scene.h  ResourceHeader.h  ResourceManager.h
kOS/Engine/Scene/: SceneData.h  SceneManager.cpp  SceneManager.h
kOS/Engine/Scripting/: ComponentRegistry.cpp  ComponentRegistry.h  ScriptManager.cpp  ScriptManager.h
kOS/Kos Editor/Application/: Application.cpp  Application.h  Window.cpp  Window.h  main.cpp
kOS/Kos Editor/AssetManager/: AssetDatabase.cpp  AssetDatabase.h  AssetManager.cpp  AssetManager.h  Prefab.cpp  Prefab.h
kOS/Kos Editor/Assets/Material/: Goose.mat  M2EnemyMaterial.mat  OrangePrototypeMaterial.mat  SewerWalls.mat  WhitePrototypeMaterial.mat
kOS/Kos Editor/Assets/Prefabs/: Acid Prop Holder.prefab  BackpackTest.prefab  BulletPrefab.prefab  Electric Prop 1.prefab  FireballPrefab.prefab  GroundSpikesPrefab.prefab  LightningStrikePrefab.prefab  box.prefab
kOS/Kos Editor/Compilers/: Compiler.h  Compiler_BACKUP_1464.h  Compiler_BASE_1464.h  Compiler_LOCAL_1464.h  Compiler_REMOTE_1464.h  TextureCompilerData.h
kOS/Kos Editor/Configs/: Config.json  ConfigPath.h  editorTag.txt  imgui.ini  imguiStyle.json
kOS/Kos Editor/Editor/: EditorReflection.h  Payload.h
kOS/Resource/: 01acec43-3a7f-87c0-0791-3b9d74446a09.mat  01e5663a-659d-bb7a-3209-f1b61411068d.mesh  02826a5f-3588-9200-d1f3-ca5a35981a02.dds  084212fc-c344-c615-3381-83350ec06fb7.mesh  099a08b9-935e-d6b8-cbdd-1f2acf398fc8.dds  0a94e2c3-95a3-76de-cb41-6f0447a34d77.scene  101c4a84-e739-2a45-2ced-c95d200c7320.anim  101c4a84-e739-2a45-2ced-c95d200c7320.mesh  143f41c2-f085-a00b-6aaf-482f1972a36a.scene  1836b827-95b0-adbd-0984-c191419cdbc5.scene  22a4f9d3-bc49-8778-f647-06d659eef730.dds  235213ea-31e8-db0b-96ed-4a62682a47bc.scene  255e5751-9b42-49d5-36ac-0e97e553028b.scene  28672327-cc29-2a47-e5bb-01517b8cbd54.scene  2992d39f-f76d-3b30-921a-64c10f739f3f.dds  2d12bd66-920b-49da-5112-08d64ce74503.scene  326f2835-f511-2281-293d-80fa4a1bf88b.scene  34bfeb15-c58c-c7b5-5252-aa36113f7e8d.scene  38e33318-0437-4332-4bd2-164639805940.anim  4860e0d0-6363-fc37-45b7-74aa8fccc691.mat  4ae68c06-b2ea-e564-5c50-fa194ea7fe48.scene  4bf6bcba-4250-0fd3-5311-780c3c52c78b.dds  4c9702d6-127d-fc41-6704-bc63dc2b0998.scene  4d2a70ed-5a02-c285-432e-b2d342f44972.fntc  53602e67-2a8d-e367-fe48-ffecc504d71a.anim  53602e67-2a8d-e367-fe48-ffecc504d71a.mesh  56f6f31a-76ac-6496-5761-dc7550379672.dds  5d8311c4-da53-b0cc-ebec-376730e44ab4.dds  61cfd855-ca21-6e2a-3bf8-8fc94756f547.mat  66adf257-5e24-d6e6-4321-1cf241444414.scene  6a94d513-1bfb-25ea-a1f2-40ccb800822d.prefab  776a664a-d8ea-96c9-e74e-f815786d020a.dds  7b0adace-76b2-df23-aedb-f6a5ed8d4a88.anim  7b0adace-76b2-df23-aedb-f6a5ed8d4a88.mesh  7c849437-f520-f246-6742-d47c3e0d9657.fntc  8036bb1e-f73c-e8d2-f9c2-75b3a882758b.mesh  871791c7-181b-d197-848f-255b72e14221.scene  883864c3-55b8-3025-848b-02a796f88b29.scene  8e6506dc-d67a-4a0d-e6dc-a3e3bb435be9.scene  8fee6749-a54c-3071-9cd2-018187d80c78.dds  (+26 more)
kOS/Resource/R_Model/: 602fe0fc-128b-da39-32a4-40a5b0b2354b.mesh
kOS/ScriptingDLL/: CMakeLists.txt
kOS/ScriptingDLL/ScriptAdapter/: TemplateSC.cpp  TemplateSC.h  Updater.cpp
kOS/Test/: common.h  test.cpp
(+61 files in other folders)
